# FrankyCPP_old

./: .clang-format  .gitignore  .gitmodules  Bitboards.xlsx  CMakeLists.txt  CMakeSettings.json  FrankyCPP_UML.vsdx  README.md  ast-dump.sh
Franky/: Bitboards.cpp  CMakeLists.txt  globals.h
Release/: Playstrength.txt
STS/: RunSTSRating_v3.bat  STS_Rating.txt
STS/STS_v1/: RunSTS_EEAI_v1.bat  tony-pos_LAN.epd
STS/STS_v1/New_Format_STS_LAN/: STS10_LAN.epd  STS11_LAN.epd  STS12_LAN.epd  STS13_LAN.epd  STS14_LAN.epd  STS15_LAN.epd  STS1_LAN.epd  STS2_LAN.epd  STS3_LAN.epd  STS4_LAN.epd  STS5_LAN.epd  STS6_LAN.epd  STS7_LAN.epd  STS8_LAN.epd  STS9_LAN.epd
books/: pgn_test.pgn  pgn_test2.pgn
fmt/: CMakeLists.txt
fmt/doc/html/: api.html  genindex.html
fmt/include/fmt/: color.h  core.h  format-inl.h  format.h
fmt/test/: scan-test.cc
spdlog/: CMakeLists.txt
spdlog.old/include/spdlog/: logger-inl.h  spdlog.h
spdlog.old/include/spdlog/details/: pattern_formatter-inl.h
spdlog/include/spdlog/: tweakme.h
spdlog/include/spdlog/details/: os-inl.h  thread_pool-inl.h
src/: Attacks.cpp  Attacks.h  Bitboards.cpp  Bitboards.h  CMakeLists.txt  Engine.cpp  Engine.h  EngineConfig.h  Evaluator.cpp  Evaluator.h  EvaluatorConfig.h  Fifo.h  INIT.cpp  Logging.cpp  Logging.h  Move.h  MoveGenerator.cpp  MoveGenerator.h  OpeningBook.cpp  OpeningBook.h  PGN_Reader.cpp  PGN_Reader.h  Perft.cpp  Perft.h  Position.cpp  Position.h  Random.h  Search.cpp  Search.h  SearchConfig.h  SearchLimits.cpp  SearchLimits.h  SearchMode.cpp  SearchMode.h  SearchStats.cpp  SearchStats.h  Semaphore.cpp  Semaphore.h  TT.cpp  TT.h  (+27 more)
src/spdlog/: tweakme.h
test/: AttacksTest.cpp  BOOST_Test.cpp  BitboardTest.cpp  CMakeLists.txt  CMakeLists.txt.in  ClionGTestBugTest.cpp  EngineTest.cpp  EvaluatorTest.cpp  FifoTest.cpp  GlobalsTest.cpp  LoggingTest.cpp  MiscTest.cpp  MoveGeneratorTest.cpp  OpeningBookTest.cpp  PGN_ReaderTest.cpp  PerformanceTests.cpp  PerftTest.cpp  PositionTest.cpp  SearchStatsTest.cpp  SearchTest.cpp  SearchTreeSizeTest.cpp  SelfPlayUCITest.cpp  SemaphoreTest.cpp  TT_Test.cpp  TestSuiteTest.cpp  TestSuiteTests.cpp  Test_Fens.h  ThreadPoolTest.cpp  TimingTests.cpp  TypesTest.cpp  UCITests.cpp  ValuesTest.cpp  main.cpp
test/Tests/: BOOST_Test.cpp  BitboardTest.cpp  BitboardTests.cpp  EngineTest.cpp  EvaluationTest.cpp  EvaluatorTest.cpp  GlobalsTest.cpp  LoggingTest.cpp  MiscTest.cpp  MoveGeneratorTest.cpp  PerftTest.cpp  PositionTest.cpp  SearchTest.cpp  SearchTreeSizeTest.cpp  SelfPlayUCITest.cpp  SemaphoreTest.cpp  TT_Test.cpp  TestSuiteTests.cpp  TimeingTests.cpp  TimingTests.cpp  UCITests.cpp  ValuesTest.cpp  test.cpp
testsets/: franky_tests.epd
